style.css
:root {
  --malika-red: #fd492b;
  --malika-turquoise: #6CCCDE;
}

html {
  scroll-behavior: smooth;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: 'Roboto Mono', monospace;
}

.main-container {
  width: 100%;
}

.parallax {
  background-image: url("Malika-Favre-vector-01.png");
  width: 100%;
  min-height: 100vh; 
  margin-bottom: 100px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}


.title-container {
  width: 100%;
  background-color: black;
  text-transform: uppercase;
  z-index: 1;
  padding: 0;
}

.title {
  color: white;
  text-align: center;
  padding: 0;
  font-size: 2em;
}

@media (min-width: 600px) {
  .title {
    font-size: 3em;
  }
}

.config-container {
  background-color: black;
  font-size:24px;
  display: flex;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  justify-content: center;
  width: 100%;
  padding-bottom: 100px;
  padding: 0;
}

.three-colors {
  position: absolute;
  width: 100%;
  align-items: center;
  padding: 0;
}

.img-mask {
  width: 100%;
  position: relative;
  left: 0;
  align-items: center;
}

@media (max-width: 600px) {
  .img-mask {
    top: -2px;
  }
}



#container {
  width: inherit;
}

/* Layout */
.wrapper {
  display: flex;
  flex-flow: row wrap;
  flex-direction: row;
  /* justify-content: center; */
  padding-bottom: 100px;
}

.wrapper > * {
  width: 50%;
  display: flex;
  flex-direction: column;
}
@media (max-width: 600px) {
  .wrapper > * {
    width: 100%;
  }
}

@media (max-width: 600px) {
  .img-mask > * {
    width: 100%;
  }
}

/* Shapes */
.shape {
  opacity: 1;
}

#shapeCircle {
  opacity: 1;
}

aside {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 20px;
  width: 300px;
  margin-left: auto;
  margin-right: auto;
}

@media (min-width: 800px) {
  .color-palette {
    padding: 30px;
  }
}


/* Buttons */
button {
  font-size: 1.2em;
  outline: none;
  font-size: 0.6em;
  height: 40px;
  width: 70px;
  border-top: 20px;
  font-family: 'Roboto Mono', monospace;
  font-size: 0.5em;
  text-transform: uppercase;
  padding: 0;
  color: beige;
  background:black;
	margin-bottom: 10px;
  outline: inherit;
  border: none;
  cursor: pointer;
}

@media (min-width: 600px) {
  button {
    height: 60px;
    width: 100px;
    margin-bottom: 15px;
    font-size: 0.7em;
  }
}


button.active {
  border-bottom: 2px solid white;
}

.color-btn.active {
  border: 3px solid white;
}

.button-cat {
  border: none;
  color: grey;
}

.button-cat.active {
  border-bottom: 2px solid white;
  color: white;
}

h3 {
  color: white;
  font-size: 0.6em;
  text-transform: uppercase;
  letter-spacing: 2px;
  margin-bottom: 20px;
  margin-top: 30px;
}


@media (min-width: 600px) {
  h3 {
    font-size: 1em;
    margin-bottom: 15px;
  }
}



section {
  text-align: center;
}

.going-down {
  margin-bottom: 0.5em;

  width: 2em;
  height: 2em;

  position: absolute;
  left: calc(50% - 1em);
  bottom: 0.5em;

  display: flex;
  justify-content: center;
  align-items: center;

  border: 5px solid var(--malika-red);
  background-color: var(--malika-red);
  border-radius: 50%;

  font-family: monospace;
  font-size: 4em;
  text-decoration: none;
}

.arrow {
  display: block;
  color: #303fff;
  height: 50px;

  /* apply the animation */
  animation-name: goingDown;
  animation-duration: .5s;
  animation-delay: 0s;

  /* how many times should the animation play */
  animation-iteration-count: infinite;
  /* the animation should reverse direction each cycle */
  animation-direction: alternate;
  /* timing function */
  animation-timing-function: linear;
}

#arrow-down-blue {
  height: 60px;
}



.arrow {
  display: block;
  color: var(--arrow-color);

  /* apply the animation */
  animation-name: goingDown;
  animation-duration: .8s;
  animation-delay: 0s;

  /* how many times should the animation play */
  animation-iteration-count: infinite;
  /* the animation should reverse direction each cycle */
  animation-direction: alternate;
  /* timing function */
  animation-timing-function: linear;
}


/* animation of the arrow button */
@keyframes goingDown {
  0% {
    transform: translateY(-20%) scale(1);
  }
  100% {
    transform: translateY(10%) scale(1);
  }
}

/* button colors */

#buttonLips {
  background-color: none;
}

.color-name {
  visibility: hidden;
}

#buttonYellow {
  background-color: #f0f076;
}

#buttonGreen {
  background-color: #9ff076;
}

#buttonPink {
  background-color: #ed4cba;
}

#buttonBlue {
  background-color: #5275ff;
}

#buttonDarkRed {
  background-color: #b90d10;
}

#buttonTurquoise {
  background-color: #6CCCDE;
}

#buttonRed {
  background-color: #fd492b;
}

#buttonNude {
  background-color: #fdd5c4;
}

#btnSave {
  background-color: yellow;
  color: black;
}

